# nlenergy

./: .gitignore  Cargo.toml  migrations.sql
migrations/2023-04-25-193626_initial/: up.sql
old/: README.md
old/telegram-worker/migrations/2023-05-01-190429_initial/: down.sql  up.sql
old/telegram-worker/src/: main.rs  schema.rs
old/types/src/: joule.rs  lib.rs
rp-meter-reader/: Cargo.toml
rp-meter-reader/src/: main.rs
src/: energy.rs  import.rs  main.rs  models.rs  report.rs  schema.rs  telegram.rs
src/cmd/: mod.rs  telegram.rs
telegram-worker/: Cargo.toml
telegram-worker/src/: main.rs  models.rs
types/: Cargo.toml
types/src/: rate.rs
