[package]
name = "nlenergy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.4", features = ["derive"] }
csv = "1.2.1"
rust_decimal = { version = "1.29.1", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
sha256 = "1.1.3"
sled = "0.34.7"
