[package]
name = "rp-meter-reader"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
defmt = "0.3.4"
defmt-rtt = "0.4.0"
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3.1", features = ["defmt"] }
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nightly"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nightly", "time-driver", "critical-section-impl"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "nightly"] }
